fixed board overflow

--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,6 @@
 html, body {
 	height:100%;
-	padding-bottom: 5rem;
+	padding-bottom: 60px;
 	overflow: auto;
 }
 
@@ -9,7 +9,7 @@ html, body {
 }
 
 .jumbotron {
-	height:100%;
+	height:100vh;
 	padding: 0;
 	margin: 0;
 }
@@ -24,6 +24,10 @@ html, body {
 
 .border-bottom:last-child {
 	border: none!important;
+}
+
+#mainFooter {
+	height: 60px;
 }
 
 /*button {*/
@@ -74,7 +78,8 @@ a.nav-link {
 }
 
 .card-img-top {
-	padding: 2rem 3rem 2rem 3rem;
+	padding: 3rem;
+	height: 20rem;
 }
 
 #signInBtn {
@@ -148,6 +153,7 @@ a.nav-link {
 
 /*captains view*/
 #captainsPage {
+	padding-bottom: 60px;
 	background-color: white;
 }
 
